--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/node": "18.11.18",
+    "aws-cdk": "2.63.1",
     "jest": "^29.4.1",
     "ts-jest": "^29.0.5",
-    "aws-cdk": "2.63.1",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
   },
   "dependencies": {
+    "@types/aws-lambda": "^8.10.110",
     "aws-cdk-lib": "2.63.1",
+    "aws-sdk": "^2.1309.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
