--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
-    "@types/node": "18.11.18",
+    "@types/node": "^18.11.18",
+    "@types/uuid": "^9.0.0",
     "aws-cdk": "2.63.1",
     "jest": "^29.4.1",
     "ts-jest": "^29.0.5",
@@ -24,6 +25,7 @@
     "aws-cdk-lib": "2.63.1",
     "aws-sdk": "^2.1309.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "uuid": "^9.0.0"
   }
 }
