--- a/src/lambas/api/user/package.json
+++ b/src/lambas/api/user/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create",
+  "name": "user",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,9 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "aws-sdk": "^2.1313.0",
-    "awssdk": "^1.0.1",
-    "uuid": "^9.0.0"
+  "types": "./index.d.ts",
+  "devDependencies": {
+    "@types/aws-sdk": "^2.7.0"
   }
 }
